# usenc

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: .nav.yml  index.md
docs/api/: core.md
docs/development/: adding-encoders.md  contributing.md
docs/encoders/: base16.md  base2n.md  base32.md  base64.md  cstring.md  doubleurl.md  escape.md  hash.md  hex.md  html.md  md5.md  sha1.md  sha256.md  unicode.md  url.md
docs/getting-started/: installation.md  quickstart.md
scripts/: generate_docs.py
src/usenc/: __init__.py  cli.py  core.py  utils.py
src/usenc/encoders/: __init__.py  base.py  base16.py  base2n.py  base32.py  base64.py  cstring.py  doubleurl.py  encoder.py  escape.py  hash.py  hex.py  html.py  md5.py  sha1.py  sha256.py  unicode.py  url.py
tests/: conftest.py  test_base.py  test_basics.py  test_cli.py  test_core.py  test_roundtrip.py  test_snapshots.py  test_utils.py
tests/custom/: test_base2n.py  test_escape.py  test_hash.py  test_hex.py
tests/snapshots/: samples.txt
tests/snapshots/base32/: crockford_alphabet.txt  hex_alphabet.txt  z_alphabet.txt
tests/snapshots/base64/: url_alphabet.txt
tests/snapshots/doubleurl/: exclude.txt  include.txt  include_all.txt  include_all_except_one.txt  lowercase.txt  simple_exclude.txt  simple_include.txt
tests/snapshots/hex/: base.txt  exclude.txt  include.txt  include_all_except_one.txt  lowercase.txt  prefix.txt
tests/snapshots/url/: exclude.txt  include.txt  include_all.txt  include_all_except_one.txt  lowercase.txt  simple_exclude.txt  (+1 more)
