[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usenc"]

[project]
name = "usenc"
version = "0.1.0"
description = "A Universal String Encoder"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Xavier 'crashoz' Launey", email = "xavier.launey@gmail.com"}
]
keywords = ["string", "encoder", "encodings", "decoder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependencies
dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-awesome-nav>=3.0.0"
]

# CLI entry points
[project.scripts]
usenc = "usenc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "src/usenc/encoders"]
python_files = ["*"]
python_functions = ["test_*"]

[project.urls]
Homepage = "https://github.com/crashoz/usenc"
Documentation = "https://github.com/crashoz/usenc"
Repository = "https://github.com/crashoz/usenc"